force-app/main/default/objects/gmpkg__Grid_Options__mdt/gmpkg__Grid_Options__mdt.object-meta.xml
<CustomObject>
    <label>Grid Options</label>
    <pluralLabel>Grid Options</pluralLabel>
</CustomObject>