force-app/main/default/objects/gmpkg__Grid_Options__mdt/fields/gmpkg__Lookup_Options__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Lookup_Options__c</fullName>
    <label>Lookup Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>