force-app/main/default/objects/gmpkg__Grid_Options__mdt/fields/gmpkg__Sobject__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Sobject__c</fullName>
    <label>Sobject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Grid_Options</relationshipLabel>
    <relationshipName>Grid_Options</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>